corrected maint comments unit tests